owen/static/css/owen.css
@font-face {
    font-family: 'olde_englishregular';
    src: url('../fonts/oldenglish/oldeenglish-webfont.woff2') format('woff2'),
    url('../fonts/oldenglish/oldeenglish-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

/*  Article previews  */

h4.subject-header, h4.subject-header a {
    text-transform: uppercase;
    font-family: "Work Sans", sans-serif;
    color: #DF3331;
    margin-top: 20px;
    font-weight: 600;
    font-size: 14px;
}
.article-header {}
.author-header, .author-header a {
    text-align: center;
    font-family: "Work Sans", sans-serif;
    font-size: 16px;
    font-weight: 600;
}
.date-header {
    font-family: "Work Sans", sans-serif;
    font-weight: 400;
    font-size: 16px;
}

#paper-title a:hover {
    text-decoration: none;
}
#paper-title {
    font-family: olde_englishregular, serif;
    text-align: center;
    font-size: 72px;
}

.featured-article img {width: 100%; height: auto;}
.featured-article .article-header {
    text-align: center;
    font-size: 52px;
    margin-top: 10px;
}
.featured-article .subject-header {text-align: center;}
.featured-article .subject-header a {}
.featured-article .author-header, .featured-article .author-header a {
    margin-bottom: 20px;
}
.featured-article .intro {
    text-align: center;
    font-size: 22px;
}

.notable-article img {width: 80%; height: auto;}
.notable-article .article-header {
    text-align: center;
    margin-top: 10px;
}
.notable-article .subject-header {text-align: center;}
.notable-article .subject-header a {}
.notable-article .author-header, .notable-article .author-header a {
    margin-top: 10px;
    margin-bottom: 10px;
}
.notable-article .intro {
    text-align: center;
    font-size: 16px;
}

.preview-article img {width: 100%; height: auto;}
.preview-article .subject-header, .preview-article .date-header {text-align: right;}
.preview-article .article-header, .preview-article .author-header, .preview-article p {text-align: left;}
.preview-article .article-header {margin-top: 10px;}
.preview-article .author-header {margin-top: 10px;}
.preview-article .intro {font-size: 16px;}

@media (max-width: 767px) {
    .preview-article .subject-header, .preview-article .date-header, .preview-article .article-header,
    .preview-article .author-header, .preview-article p {
        text-align: center;
    }
    .preview-article img {width: 80%;}
}

.subject-box .subject-header {
    text-align: center;
    font-size: 64px;
}
.subject-box .subject-info {
    text-align: center;
    font-size: 20px;
}


/*  Navbar  */


.navbar .navbar-nav {
    display: inline-block;
    float: none;
    font-family: "Work Sans", sans-serif;
    font-weight: 600;
    text-transform: uppercase;
}
.navbar .navbar-collapse {
    text-align: center;
}
.navbar-brand {
    font-family: "olde_englishregular", Serif;
    font-size: 28px;
}
nav hr {
    margin: 0;
}


/**  Spacing between home page columns  **/


/* TODO: Make the line disappear in responsive view */
.border-between {
    overflow: hidden;
}
.border-between > [class*='col-']:before {
 background: #ccc;
 bottom: 0;
 content: " ";
 left: 0;
 position: absolute;
 width: 1px;
 top: 0;
}
.border-between > [class*='col-']:first-child:before {
 display: none;
}
.row.border-between [class*="col-"]{
    margin-bottom: -99999px;
    padding-bottom: 99999px;
}


/**  Article page  **/


.article-photo {max-width: 100%; height: auto;}
.article .author-header, .article .subject-header, .article .article-header {text-align: left;}
.article .article-header {font-size: 48px;}
.article p a, .article ol a, .article ul a {
    text-decoration: underline;
}

.author-info .author-header, .author-info .author-photo {
    display: inline-block;
    vertical-align: bottom;
    margin-bottom: 0;
}
.author-info .author-photo {
    border-radius: 50%;
    margin-right: 10px;
}

.article p, .article ul, .article ol {
    font-size: 18px;
    line-height: 1.4em;
    margin-bottom: 18px;
}
.article li ul, .article li ol {
    margin-bottom: 0;
}

.captioned-image figcaption {
    margin-bottom: 24px;
}
.captioned-image figcaption p {
    font-size: 16px;
    font-style: oblique;
    margin-top: 8px;
    margin-bottom: 4px;
}
.captioned-image img {max-width: 100%; height: auto;}
.captioned-image .img-source {
    font-family: "Work Sans", sans-serif;
    font-weight: 600;
    color: #999;
    font-size: 12px;
}

.responsive-object {
    position: relative;
}
.responsive-object iframe,
.responsive-object object,
.responsive-object embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.responsive-object, .captioned-image {
    margin-top: 24px;
    margin-bottom: 24px;
}

blockquote.pull-quote {
    width: 50%;
    float: right;
    margin-left: 24px;
    padding-right: 0;
}
.pull-quote p {
    font-size: 22px;
    margin-bottom: 8px;
}
.pull-quote p.quote-author {
    font-size: 14px;
    text-align: right;
    font-family: "Work Sans", sans-serif;
    font-weight: 600;
    color: #999;
}

.author-block {margin-top: 30px;}
.author-block .author-photo, .author-block .author-bio {
    vertical-align: top;
    display: inline-block;
}
.author-block .author-photo {
    border-radius: 50%;
    margin-right: 10px;
}
.author-block .author-bio {
    width: calc(100% - 120px);
}
.author-block .author-bio p {
    font-size: 16px;
    display: inline;
    font-style: oblique;
}
.author-block .author-bio .author-more {
    font-family: "Work Sans", sans-serif;
    font-weight: 600;
    font-size: 16px;
}

.social-icons {
    text-align: center;
}
.social-icons a {
    display: inline-block;
    margin: 8px;
}
.social-icons a:hover {
    color: #DF3331;
}


/**  Author Page  **/


.author-page-block .author-photo {
    width: 300px;
    height: auto;
    margin-right: 24px;
    margin-bottom: 24px;
}
.author-page-block .author-bio {
    font-size: 18px;
    line-height: 1.4em;
    margin-bottom: 18px;
    margin-top: 24px;
}
.author-page-block .author-header {
    text-align: left;
    font-size: 28px;
    margin-top: 10px;
    margin-bottom: 10px;
}
.author-page-block .img-wrapper {
    overflow: hidden;
    float: left;
}

@media (max-width: 600px) {
    .author-page-block .img-wrapper {
        width: 100%;
        float: none;
    }
  .author-page-block .author-photo {
      width: 200px;
      height: auto;
      display: block;
      margin: 0 auto;
  }
  .author-page-block .subject-header, .author-page-block .author-header {
      text-align: center;
  }
  .author-page-block #twitter-follow {
      text-align: center;
  }
}


/**  Footer  **/


footer {
    font-family: "Work Sans", sans-serif;
    //font-weight: 600;
    color: #999;
}
footer .nav {
    float: none;
    display: inline-block;
    color: #999;
}
footer .nav a {
    color: #999;
}
footer .nav > li > a:hover {
    background-color: transparent;
    color: #DF3331;}
footer div {
    text-align: center;
}

